# uauth

./: .clang-format  CMakeLists.txt
include/ya_auth/: component.hpp
include/ya_auth/models/: user_info.hpp
include/yauth/: client.hpp  component.hpp  exception.hpp
include/yauth/models/: access_token.hpp  user_info.hpp
src/: client.cpp  component.cpp
src/models/: user_info.cpp
unittests/: user_info_test.cpp
